--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple Vue image cropping component.",
   "main": "./dist/index.js",
   "scripts": {
-    "build": "rm -rf ./dist && webpack --config webpack.config.js"
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -17,18 +18,20 @@
   },
   "homepage": "https://github.com/zhangtao25/vcrop#readme",
   "dependencies": {
+    "vue": "^2.6.10"
+  },
+  "devDependencies": {
     "@babel/core": "^7.4.3",
-    "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "babel-loader": "^8.0.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-runtime": "^6.26.0",
+    "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
+    "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
-    "vue": "^2.6.10",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0"
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.1"
   }
 }
